Table Staff {
  amka int [pk, not null]
  name varchar [not null]
  surname varchar [not null]
  age int [not null]
  email varchar [not null, unique]
  phone int [not null, unique]
  hire_date datetime [not null]
  type varchar [not null, note: 'DOCTOR, NURSE, or ADMIN']
}

Table Nurse {
  amka int [pk, not null]
  rank varchar [not null, note: 'ASS_NURSE, NURSE, or ADMIN_NURSE'] 
}

ref: Nurse.amka - Staff.amka

Table AdminStaff {
  amka int [pk, not null]
  role varchar [not null, note: 'DIRECTOR, SECRETARY, or ACCOUNTANT'] 
  office int [not null, unique]
}

ref: AdminStaff.amka - Staff.amka

Table Doctor {
  amka int [pk, not null]
  licence_number int [not null, unique]
  specialty varchar [not null, note: 'Valid specialties: EMERGENCY_MEDICINE_PHYSICIAN, INTERNAL_MEDICINE_PHYSICIAN, GENERAL_SURGEON, OBSTETRICIAN_GYNECOLOGIST, PEDIATRICIAN, ANESTHESIOLOGIST, RADIOLOGIST, PATHOLOGIST, CARDIOLOGIST, ORTHOPEDIC_SURGEON, NEUROLOGIST, PSYCHIATRIST'] 
  rank varchar [not null, note: 'RESIDENT, JUNIOR_ATTENDING, SENIOR_ATTENDING, or DIRECTOR'] 

  supervisor_id int 
}

ref: Doctor.amka - Staff.amka
ref: Doctor.supervisor_id < Doctor.amka

Table Department {
  dept_id int [pk, increment]
  name varchar [not null]
  description text [not null]
  beds_count int [not null]
  floor int [not null]

  director_id int 
}

ref: Department.director_id - AdminStaff.amka


Table Doctor_Department {
  doctor_id int [not null]
  dept_id int [not null]
}

ref: Doctor_Department.doctor_id > Doctor.amka
ref: Doctor_Department.dept_id > Department.dept_id


Table Bed {
  bed_id int [pk, increment]
  type varchar [not null, note: 'ICU, SINGLE_BED, or MULTI_BED']
  status varchar [not null, note: 'FREE, OCCUPIED, or MAINTENANCE']
  dept_id int [not null]
}

ref: Department.dept_id > Bed.dept_id